# tete

./: .gitignore  .gitlab-ci.yml  README.md  a.txt  b.txt  docker-compose.yml  eq30.sln  server-docker-compose.yml  watchus-docker-compose.yml  worker-docker-compose.yml
BuildUs/: BuildYAML.cpp  CMakeLists.txt  build.cpp  buildus.cpp  clean.cpp  fileManager.cpp  utils.cpp
BuildUs/TestBuild/ex0/: config.buildus
BuildUs/TestBuild/ex1/: config.buildus
BuildUs/TestBuild/ex2/: config.buildus  main.cpp
BuildUs/ToBuild/: config.buildus  helloworld.cpp
BuildUs/tests/: CMakeLists.txt  unittests.cpp
ConnectionDB/: ConnectionDB.csproj  Dockerfile  Startup.cs  WeatherForecast.cs  appsettings.json  entrypoint.sh
ConnectionDB/Controllers/: ScriptsController.cs  WeatherForecastController.cs  WorkersController.cs
ConnectionDB/Data/: MyDbContext.cs  Script.cs  Worker.cs
ConnectionDB/Migrations/: 20210725200829_initial.Designer.cs  20210725200829_initial.cs  20210808044301_init.Designer.cs  20210808044301_init.cs  MyDbContextModelSnapshot.cs
ConnectionDB/Properties/: launchSettings.json
DataContract/: Runner.cs  Script.cs  Worker.cs
DeployUS/: DeployUS.csproj  Dockerfile  Program.cs  Startup.cs
DeployUS/Controllers/: ExecController.cs  InterfaceController.cs
TestUs/: Dockerfile  MainTest.cs  TestUs.csproj
WorkUs/: Dockerfile  Program.cs  Startup.cs  WorkUs.csproj  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
gitus/: add.cpp  checkout.cpp  commit.cpp  fileManager.cpp  gitus.cpp  init.cpp  log.cpp  objectManager.cpp  scripts.cpp
(+18 files in other folders)
